# bert_cpp

./: CMakeLists.txt  README.md
python/: trace.bert.chinese.py  trace.bert.uncased.py
src/: CMakeLists.txt  main.cpp
utils/ftokenizers/: CMakeLists.txt  ftokenizers.cpp
